Fix: - css: added some css coloring, and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -12,15 +12,56 @@
    ==========================================================================
    Author ID: Davit Dostourian Erbe // 281665 // ORT Uruguay, Programacion 1
    ==========================================================================
+    TODO: - finish css, fix padding on buttons and text
+          - fix text inside buttons
+          - fix padding inside articles (all sides
+          - fix padding inside sections (all sides)
+          - add padding inside cells of table
+
+
 */
 
 
 
 html {
   font-family: "Arial", sans-serif;
+  background-color: #696969;
   color: #222;
   font-size: 1em;
   line-height: 1.4;
+}
+
+h2{
+  margin-left: 80px;
+}
+
+h1,
+h3{
+  color:black;
+}
+
+section{
+  background-color: #FFFFFF;
+  border-radius: 5px; /* All corners are rounded by 15px */
+
+}
+
+article{
+  background-color: whitesmoke;
+  border-radius: 5px; /* All corners are rounded by 15px */
+  margin-left: 80px;
+}
+
+button{
+  color:white;
+  background-color: darkcyan;
+  border-radius: 5px;
+  border-width:0px;
+}
+
+table, th, td {
+  border: 2px solid black;
+  border-collapse: collapse;
 }
 
 /*
